# GenAI-Agentic-Mastery

./: README.md  pyproject.toml  reqiurement.txt
RAG/: code.ipynb
RAG/Data/: Python.txt
RAG/Data/vector_store/99c18f5a-ee7f-4fdf-9890-4f337465f1f9/: index_metadata.pickle
updated langchain/: 1-langchain_intro.ipynb  messages.ipynb  middlewares.ipynb  model_integration.ipynb  stracture_output.ipynb  tools.ipynb
