[project]
name = "langchain-updated"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.2.0",
    "langchain>=1.3.1",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.0",
    "langchain-google-genai>=4.2.3",
    "langchain-groq>=1.1.2",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.1",
    "langsmith>=0.8.5",
    "pymupdf>=1.27.2.3",
    "pypdf>=6.12.2",
    "python-dotenv>=1.2.2",
]
